--- a/public/assets/css/main-style.css
+++ b/public/assets/css/main-style.css
@@ -144,6 +144,7 @@
     font-size: 15px;
     font-weight: 700;
     padding: 0 10px 0 10px;
+    float: left;
 }
 
 .login a, .register a {
@@ -177,6 +178,19 @@
     font-size: 15px;
     font-weight: 700;
     padding: 0 10px 0 10px;
+    float: left;
+}
+
+.logout {
+    font-size: 15px;
+    font-weight: 700;
+    padding: 0 10px 0 10px;
+    cursor: pointer;
+    float: left;
+}
+
+.logout:hover {
+    color: #d8232a;
 }
 
 main{
