--- a/public/assets/css/main-style.css
+++ b/public/assets/css/main-style.css
@@ -170,13 +170,18 @@
 }
 
 .header-user_icon {
-    width: 12px; height: 17px;
-    background: url("../img/css_sprites.png") -380px -10px;
+    float: left;
+}
+
+.header-user_icon img{
+    height: 25px;
+    width: 25px;
 }
 
 .header-user_name {
     font-size: 15px;
     font-weight: 700;
+    line-height: 25px;
     padding: 0 10px 0 10px;
     float: left;
 }
@@ -184,6 +189,7 @@
 .logout {
     font-size: 15px;
     font-weight: 700;
+    line-height: 25px;
     padding: 0 10px 0 10px;
     cursor: pointer;
     float: left;
