--- a/public/app/web-app/web-app-style.css
+++ b/public/app/web-app/web-app-style.css
@@ -22,7 +22,7 @@
     position: fixed;
     top: 80px;
     left: 0;
-    z-index: 4;
+    z-index: 2;
     font-family: Calibri, sans-serif;
 }
 
@@ -31,35 +31,89 @@
     min-width: 200px;
 }
 
-.content {
-    flex-basis: 90%;
-    border-left: 1px solid #a8aaaf;
-}
-
 .filter-title{
     font-size: 16px;
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
-    padding: 10px 0;
+    padding: 10px;
     border-bottom: 1px solid #a8aaaf;
 }
 
 .filter-item {
-    line-height: 25px;
-    padding-left: 20px;
-    font-size: 18px;
-    color: #3f444e;
+    position: relative;
+    margin-bottom: 1px;
+    max-width: 130px;
+    overflow: hidden;
 }
 
 .filter-subitem {
+    display: inline-block;
     font-size: 16px;
-    padding-left: 50px;
     color: #989ca4;
 }
 
 .filter-button {
     float: right;
+}
+
+.input-tab {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+}
+
+.label-tab {
+    position: relative;
+    display: block;
+    padding: 0 0 0 1em;
+    font-weight: bold;
+    line-height: 40px;
+    cursor: pointer;
+}
+
+.tab-content {
+    max-height: 0;
+    overflow: hidden;
+    padding-left: 20px;
+    -webkit-transition: max-height .35s;
+    -o-transition: max-height .35s;
+    transition: max-height .35s;
+}
+
+/* :checked */
+.filter-item input:checked ~ .tab-content {
+    max-height: 10em;
+}
+/* Icon */
+.filter-item label::after {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    width: 3em;
+    line-height: 40px;
+    text-align: center;
+    -webkit-transition: all .35s;
+    -o-transition: all .35s;
+    transition: all .35s;
+}
+.filter-item input[type=checkbox] + label::after {
+    content: "+";
+}
+.filter-item input[type=radio] + label::after {
+    content: "\25BC";
+}
+.filter-item input[type=checkbox]:checked + label::after {
+    transform: rotate(315deg);
+}
+.filter-item input[type=radio]:checked + label::after {
+    transform: rotateX(180deg);
+}
+
+.content {
+    flex-basis: 90%;
+    border-left: 1px solid #a8aaaf;
 }
 
 .search-row {
@@ -105,7 +159,7 @@
 }
 
 .sort {
-    padding-right: 50px;
+    padding-right: 60px;
     font-family: Calibri, sans-serif;
     font-size: 18px;
     line-height: 30px;
@@ -129,7 +183,7 @@
     border-radius: 6px;
     padding: 5px;
     position: absolute;
-    z-index: 5;
+    z-index: 2;
     top: 100%;
     left: 50%;
     margin-left: -60px;
