--- a/public/app/main/home.css
+++ b/public/app/main/home.css
@@ -16,7 +16,7 @@
 .slide_text {
     position: absolute;
     background: rgba(0, 0, 0, 0.7);
-    bottom: 0;
+    bottom: 3px;
     width: 100%;
 }
 
