--- a/public/app/web-app/web-app-style.css
+++ b/public/app/web-app/web-app-style.css
@@ -170,6 +170,12 @@
     color: #989ca4;
 }
 
+.breadcrumbs a {
+    text-decoration: none;
+    color: #505050;
+    font-weight: 700;
+}
+
 .sort {
     padding-right: 60px;
     font-family: Calibri, sans-serif;
