--- a/public/app/web-app/movie-info/movie-info.css
+++ b/public/app/web-app/movie-info/movie-info.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .movie-info-title h1 {
@@ -58,14 +58,16 @@
 
 .movie-info-block {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
 }
 
-.first-column div{
+.first-column {
+    max-width: 350px;
     color: #505050;
     font-weight: 700;
+    margin-right: 30px;
 }
 
 .first-column div:nth-child(2) {
@@ -83,7 +85,6 @@
     font-size: 18px;
     line-height: 30px;
     font-style: oblique;
-    color: #989ca4;
 }
 
 .second-column {
@@ -110,7 +111,7 @@
     font-size: 18px;
     line-height: 20px;
     font-style: oblique;
-    color: #989ca4;
+    color: #505050;
     margin: 15px 0;
 }
 
