--- a/public/assets/css/main-style.css
+++ b/public/assets/css/main-style.css
@@ -105,7 +105,7 @@
     z-index: 4;
     left: 50%;
     top: 100%;
-    padding: 15px 0 15px;
+    padding: 15px;
     margin-top: 5px;
     background: #d8232a;
     border-radius: 5px;
