--- a/public/app/web-app/movie-info/movie-info.css
+++ b/public/app/web-app/movie-info/movie-info.css
@@ -10,11 +10,13 @@
 .movie-info-row {
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
     flex-wrap: wrap;
     padding-bottom: 10px;
 }
 
 .movie-info-title h1 {
+    padding-left: 70px;
     font-size: 25px;
     font-weight: 700;
     color: #505050;
@@ -67,7 +69,7 @@
     max-width: 350px;
     color: #505050;
     font-weight: 700;
-    margin-right: 30px;
+    margin: 0 30px 20px 0;
 }
 
 .first-column div:nth-child(2) {
@@ -92,8 +94,8 @@
 }
 
 .movie-info-trailer video{
-    height: 445px;
-    width: 800px;
+    max-height: 445px;
+    max-width: 800px;
     margin-bottom: 20px;
 }
 
