--- a/public/app/web-app/web-app-style.css
+++ b/public/app/web-app/web-app-style.css
@@ -31,6 +31,10 @@
     min-width: 200px;
 }
 
+.hidden-menu-ticker {
+    display: none;
+}
+
 .filter-title{
     font-size: 16px;
     font-weight: 700;
@@ -247,6 +251,8 @@
 .poster-img {
     border-radius: 6px;
     cursor: pointer;
+    width: 250px;
+    height: 395px;
 }
 
 .icon:before {
@@ -345,7 +351,88 @@
     display: none;
 }
 
+@media only screen and (max-width : 480px) {
+    .filter-position {
+        display: block;
+        position: fixed;
+        list-style:none;
+        padding: 10px;
+        margin: 0;
+        box-sizing: border-box;
+        width: 200px;
+        background-color: #2b343c;
+        height: 100%;
+        top: 80px;
+        left: -200px;
+        transition: left .2s;
+        z-index: 2;
+        -webkit-transform: translateZ(0);
+        -webkit-backface-visibility: hidden;
+    }
 
+    .hidden-menu-ticker {
+        display: none;
+    }
+
+    .btn-menu {
+        color: #fff;
+        background-color: #fff;
+        padding: 2px;
+        position: fixed;
+        top: 85px;
+        left: 5px;
+        cursor: pointer;
+        transition: left .23s;
+        z-index: 3;
+        width: 20px;
+        -webkit-transform: translateZ(0);
+        -webkit-backface-visibility: hidden;
+    }
+
+    .btn-menu span {
+        display: block;
+        height: 2px;
+        background-color: #2b343c;
+        margin: 5px 0 0;
+        transition: all .1s linear .23s;
+        position: relative;
+    }
+
+    .btn-menu span.first-span {
+        margin-top: 0;
+    }
+
+    .hidden-menu-ticker:checked ~ .btn-menu {
+        left: 160px;
+        background-color: #2b343c;
+    }
+
+    .hidden-menu-ticker:checked ~ .filter-position {
+        left: 0;
+    }
+    .hidden-menu-ticker:checked ~ .btn-menu span.first-span {
+        -webkit-transform: rotate(45deg);
+        top: 7px;
+        background-color: #fff;
+    }
+    .hidden-menu-ticker:checked ~ .btn-menu span.second-span {
+        opacity: 0;
+    }
+
+    .hidden-menu-ticker:checked ~ .btn-menu span.third-span {
+        -webkit-transform: rotate(-45deg);
+        top: -7px;
+        background-color: #fff;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+}
 
 
 
