--- a/public/app/web-app/movie-info/movie-info.css
+++ b/public/app/web-app/movie-info/movie-info.css
@@ -94,8 +94,8 @@
 }
 
 .movie-info-trailer video{
-    max-height: 445px;
-    max-width: 800px;
+    height: 445px;
+    width: 800px;
     margin-bottom: 20px;
 }
 
