Add adaptive style

--- a/public/app/main/home.css
+++ b/public/app/main/home.css
@@ -4,13 +4,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
     position: relative;
 }
 
 .slide {
     position: relative;
     display: none;
+}
+
+.slide img{
+    max-width: 100%;
 }
 
 .slide_text {
@@ -75,8 +78,8 @@
 
 .watch_now {
     position: absolute;
-    right: 150px;
-    top: 210px;
+    right: 10%;
+    top: 50%;
     background: #d8232a;
     border-radius: 5px;
     cursor: pointer;
@@ -151,11 +154,6 @@
     to {opacity: 1}
 }
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-    .prev, .next,.text {font-size: 11px}
-}
-
 /*Main row*/
 
 .first-row {
@@ -170,6 +168,7 @@
     font-weight: 700;
     color: #d8232a;
     padding: 40px 0 30px 0;
+    text-align: center;
 }
 
 .first-row p{
@@ -212,4 +211,76 @@
 .partner_5 {
     width: 158px; height: 100px;
     background: url("../../assets/img/css_sprites.png")  -10px -130px;
+}
+
+@media only screen and (max-width : 480px) {
+    .watch_now {
+        display: none;
+    }
+
+    .slide_info {
+        padding: 5px 5px 5px 10px;
+        font-size: 14px;
+    }
+
+    .slide_info span{
+        font-size: 12px;
+    }
+
+    .elem_position {
+        display: none;
+    }
+
+    .partner_3 {
+        display: none;
+    }
+
+    .partner_5 {
+        display: none;
+    }
+
+    .first-row h1{
+        font-size: 25px;
+    }
+
+    .first-row p{
+        padding: 0 10px 30px 10px;
+    }
+
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+    .watch_now {
+        display: none;
+    }
+
+    .slide_info {
+        padding: 10px 5px 10px 10px;
+        font-size: 14px;
+    }
+
+    .slide_info span{
+        font-size: 12px;
+    }
+
+    .elem_position {
+        font-size: 12px;
+        padding: 5px;
+    }
+
+    .partner_3 {
+        display: none;
+    }
+
+    .partner_5 {
+        display: none;
+    }
+
+    .first-row h1{
+        font-size: 30px;
+    }
+
+    .first-row p{
+        padding: 0 10px 30px 10px;
+    }
 }
