--- a/public/assets/css/main-style.css
+++ b/public/assets/css/main-style.css
@@ -350,6 +350,10 @@ footer{
         display: none;
     }
 
+    .footer-menu {
+        padding: 30px 0 30px 20px;
+    }
+
     .footer-logo {
         display: none;
     }
