Add adaptive style

--- a/public/app/profile/profile-style.css
+++ b/public/app/profile/profile-style.css
@@ -150,6 +150,10 @@
         font-weight: 400;
     }
 
+    .profile-search {
+        margin: 8px 10px;
+    }
+
     .watch-list h2 {
         font-size: 16px;
         padding: 0 10px;
