--- a/public/app/add-movie/add-movie.css
+++ b/public/app/add-movie/add-movie.css
@@ -130,4 +130,44 @@
     display: none;
 }
 
+@media only screen and (max-width : 480px) {
+
+    .add-container h1 {
+        font-size: 25px;
+        padding: 20px 0 10px 0;
+    }
+
+    .add-form {
+        min-width: 300px;
+        padding: 20px;
+        margin: 10px;
+    }
+
+    .add-form label {
+        font-size: 16px;
+    }
+
+    .add-form button[type="submit"], .try-again button {
+        margin: 5px;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+
+    .add-container h1 {
+        font-size: 30px;
+        padding: 30px 0 10px 0;
+    }
+
+    .add-form {
+        min-width: 400px;
+        padding: 20px;
+        margin: 10px;
+    }
+
+    .add-form button[type="submit"], .try-again button {
+        margin: 5px;
+    }
+}
+
 
