--- a/public/app/contact/contact-style.css
+++ b/public/app/contact/contact-style.css
@@ -114,3 +114,36 @@
     width: 100%;
     height: 500px;
 }
+
+@media only screen and (max-width : 480px) {
+
+    .contact h1 {
+        font-size: 25px;
+        padding: 20px 0 10px 0;
+    }
+
+    .contact-form {
+        margin: 10px 5px;
+    }
+
+    #map {
+        height: 300px;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+
+    .contact h1 {
+        font-size: 30px;
+        padding: 20px 0 10px 0;
+    }
+
+    .contact-form {
+        margin: 10px 5px;
+    }
+
+    #map {
+        height: 400px;
+    }
+
+}
