--- a/public/app/login/login.css
+++ b/public/app/login/login.css
@@ -127,4 +127,15 @@
     display: none;
 }
 
+@media only screen and (max-width : 480px) {
+
+    .auth-container h1 {
+        font-size: 25px;
+        padding: 20px 0 10px 0;
+    }
+
+    .login-form {
+        min-width: 300px;
+    }
+}
 
