--- a/public/assets/css/main-style.css
+++ b/public/assets/css/main-style.css
@@ -36,6 +36,10 @@
 
 /*Main menu*/
 
+.hidden-menu-ticker {
+    display: none;
+}
+
 .header-menu li {
     display: inline-block;
     position: relative;
