--- a/public/app/web-app/movie-info/movie-info.css
+++ b/public/app/web-app/movie-info/movie-info.css
@@ -223,7 +223,20 @@ img.hover-shadow {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
 
+@media only screen and (max-width : 480px) {
 
+
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+
+}
 
 
 
