--- a/public/assets/css/main-style.css
+++ b/public/assets/css/main-style.css
@@ -115,7 +115,6 @@
     border-radius: 5px;
     visibility: hidden;
     opacity: 0;
-    /*transform: translate(-50%, 20px);*/
     transition: .4s;
 }
 
@@ -490,6 +489,24 @@ footer{
         display: none;
     }
 
+}
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    html,
+    body {
+        height: 100%;
+    }
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+    main {
+        flex: 1 0 auto;
+    }
+    footer {
+        flex: 0 0 auto;
+    }
 }
 
 
