--- a/public/app/login/login.css
+++ b/public/app/login/login.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    background-color: #edeff0;
 }
 
 .auth-container h1 {
