--- a/public/app/web-app/web-app-style.css
+++ b/public/app/web-app/web-app-style.css
@@ -16,6 +16,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: stretch;
+    background-color: #edeff0;
 }
 
 .filter {
@@ -146,7 +147,7 @@
     outline: none;
     border: none;
     border-bottom: 1px solid #cbcdd0;
-    background-color: inherit;
+    background-color: #edeff0;
     line-height: 30px;
     font-size: 16px;
     color: #989ca4;
